--- a/apps/mini-app/pages/article/form/form.wxml
+++ b/apps/mini-app/pages/article/form/form.wxml
@@ -1,5 +1,5 @@
 <!-- 自定义导航栏 -->
-<custom-nav-bar title="新增文章" showBack="{{true}}"></custom-nav-bar>
+<custom-nav-bar title="{{pageTitle}}" showBack="{{true}}"></custom-nav-bar>
 
 <!-- 消息通知组件 -->
 <message-notification />
